projects/vb6parse/snapshots/syntax/statements/file_operations/print/print_multiple_statements.snap
---
source: projects/vb6parse/src/syntax/statements/file_operations/print.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: PrintStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: PrintKeyword
                  text: Print
                - kind: Whitespace
                  text: " "
                - kind: Octothorpe
                  text: "#"
                - kind: NumericLiteralExpression
                  children:
                    - kind: IntegerLiteral
                      text: "1"
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: StringLiteralExpression
                          children:
                            - kind: StringLiteral
                              text: "\"First\""
                - kind: Newline
                  text: "\n"
            - kind: PrintStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: PrintKeyword
                  text: Print
                - kind: Whitespace
                  text: " "
                - kind: Octothorpe
                  text: "#"
                - kind: NumericLiteralExpression
                  children:
                    - kind: IntegerLiteral
                      text: "2"
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: StringLiteralExpression
                          children:
                            - kind: StringLiteral
                              text: "\"Second\""
                - kind: Newline
                  text: "\n"
            - kind: PrintStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: PrintKeyword
                  text: Print
                - kind: Whitespace
                  text: " "
                - kind: Octothorpe
                  text: "#"
                - kind: NumericLiteralExpression
                  children:
                    - kind: IntegerLiteral
                      text: "3"
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: StringLiteralExpression
                          children:
                            - kind: StringLiteral
                              text: "\"Third\""
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
